--- a/Application/templates/crewmember-list.html
+++ b/Application/templates/crewmember-list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-Crew Members
+Manage Crew Members
 {% endblock %}
 
 {% block content %}
@@ -47,4 +47,5 @@ Crew Members
   Role: <input type="text" name="role" /><br />
   <input type="submit" value="Submit">
 </form>
+<a href="/">Return to main page</a>
 {% endblock %}
