refactor: improve navigation and UI text in crew member and event templates

--- a/Application/templates/crewmembers.html
+++ b/Application/templates/crewmembers.html
@@ -48,5 +48,10 @@
   </tr>
   {% endfor %}
 </table>
+<br>
+{% if event_id %}
+<a href="/showevents">Return to events</a>
+<br>
+{% endif %}
 <a href="/">Return to main page</a>
 {% endblock %}
