--- a/Application/templates/crewmember-list.html
+++ b/Application/templates/crewmember-list.html
@@ -39,7 +39,7 @@ Manage Crew Members
   </tr>
   {% endfor %}
 </table>
-<h2>Enter a new value here</h2>
+<h2>Add a new team member</h2>
 <form action="">
   First Name: <input type="text" name="first_name" /><br />
   Last Name: <input type="text" name="last_name" /><br />
