--- a/Application/templates/crewmember-update.html
+++ b/Application/templates/crewmember-update.html
@@ -6,7 +6,7 @@ Updating Crew Member
 
 {% block content %}
 
-<h2>Enter a new value here</h2>
+<h2>Change this crew member</h2>
 <form action="">
   <input type="hidden" name="id" value="{{id}}">
   First Name: <input type="text" name="first_name" value="{{existingFirst}}"><br />
